package es.empresa.torneo;

import es.empresa.torneo.vista.VistaPrincipal;

public class Main {

    public static void main(String[] args) {

        VistaPrincipal.lanzarVista();
    }
}